--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -223,7 +223,7 @@ html {
     left: 10%;
   -webkit-transition: -webkit-transform 233ms cubic-bezier(0, 0, 0.21, 1);
   -webkit-overflow-scrolling: touch;
-  background-color: #122e93;
+  background-color: #1C1C1C;
   box-sizing: border-box;
   height: 100vh;  
   max-height: 100vh !important;
