--- a/assets/css/templatemo-style.css
+++ b/assets/css/templatemo-style.css
@@ -1,9 +1,5 @@
 /*
-
-Reflux Template
-
-https://templatemo.com/tm-531-reflux
-
+epires.online
 */
 
 @import url(fontawesome.css);
@@ -22,7 +18,7 @@ body {
 }
 
 
-/* Basic */
+/* Basico */
 
 body {
     overflow-x: hidden;
@@ -319,6 +315,46 @@ html {
     letter-spacing: 0.5px;
 }
 
+/* Modificação para My Skills */
+.row-skill {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px; /* Espaço entre os cards */
+  }
+  
+  .col-md-7 {
+    display: flex;
+    flex: 1 1 calc(50% - 20px); /* Dois cards por linha em telas maiores */
+    max-width: calc(50% - 20px);
+  }
+  
+  .service-item {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #f8f9fa; /* Cor de fundo exemplo */
+    padding: 20px;
+    border-radius: 8px;
+    height: 100%;
+  }
+  
+  /* Media Query para Mobile */
+  @media (max-width: 768px) {
+    .col-md-7 {
+      flex: 1 1 100%; /* Um card por linha em telas menores */
+      max-width: 100%;
+    }
+  }
+  
+  
+  /* Media Query para Mobile */
+  @media (max-width: 768px) {
+    .col-md-7 {
+      flex: 1 1 100%; /* Um card por linha em telas menores */
+      max-width: 100%;
+    }
+  }
+ 
 
 /* Buttons */
 
